--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -64,14 +64,15 @@ html, body {
         opacity: 0.9;
         pointer-events: none;
         transition: width 0.3s ease-out, background-color 1.5s;
-          background-color: $progress-color;
+        background-color: $progress-color;
         position: absolute;
         left: 0;
         bottom: 0;
         height: 100%;
         z-index: 0;
 
-        &.min {
+        &.invalid {
+          opacity: 0.66;
           background-color: $danger-color;
         }
       }
