tweak spacing and cleanup funcs

--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -47,7 +47,11 @@ html, body {
   .log {
     &__card {
       background-color: $mid-color;
+
+      &-text { cursor: default; }
     }
+
+    &__tag { cursor: default; }
 
     &__tags { z-index: 1; }
 
