--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -51,9 +51,15 @@ html, body {
     background-color: white;
   }
 
-  a, .link {
-    text-decoration: underline solid $link-color 0.3rem;
+  a {
+    box-shadow: inset 0 -0.2rem 0 0 $link-color;
+    transition: 100ms;
+
+    &:hover {
+      box-shadow: inset 0 -0.6rem 0 0 $link-color;
+    }
   }
+
 
   .log {
     &__card {
