--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -29,11 +29,19 @@ html, body {
     }
   }
 
+  .socials-bar {
+    display: flex;
+    flex-wrap: wrap;
+
+    button {
+      flex: 1 1 auto;
+      margin: 0.25rem 0.5rem;
+    }
+  }
+
   .hide {
     display: none;
   }
-
-
 
   &.chakra-container {
     margin-top: 0.75rem;
@@ -46,6 +54,7 @@ html, body {
     .action {
       display: block;
       margin-left: auto;
+      padding: 0 1.5rem;
     }
   }
 
@@ -64,7 +73,7 @@ html, body {
     background-color: white;
   }
 
-  a {
+  .link {
     box-shadow: inset 0 -0.2rem 0 0 $link-color;
     transition: 100ms;
 
