start adding user and token watch on URL

--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -29,6 +29,14 @@ html, body {
     }
   }
 
+  .alert {
+    position: absolute;
+    top: 1rem;
+    left: 1rem;
+    right: 2rem;
+    z-index: 100;
+  }
+
   .socials-bar {
     display: flex;
     flex-wrap: wrap;
