--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -96,7 +96,7 @@ html, body {
 
   .log {
     &__card {
-      background-color: $mid-color;
+      //background-color: $mid-color;
 
       &-text { cursor: default; }
     }
