--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -467,6 +467,23 @@ body {
     }
   }
 
+  .min-content-height {
+    min-height: 35rem;
+  }
+
+  .footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-content: center;
+    margin-top: 1.5rem;
+    margin-bottom: 0.5rem;
+
+    svg {
+      max-height: 1.5rem;
+    }
+  }
+
   //
   //
   //.alert {
