--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -32,6 +32,21 @@ body {
 }
 
 .dev-log {
+  a,
+  p,
+  span,
+  .text,
+  .link {
+    font-size: 1.2rem;
+    font-weight: 300;
+  }
+
+  h1,
+  .title {
+    font-size: 3rem;
+    font-weight: 400;
+  }
+
   .mx-auto {
     margin: 0 auto;
   }
@@ -120,6 +135,8 @@ body {
     }
 
     &-menu {
+      // todo make responsive for desktop / phone
+
       height: 20rem;
       width: 100%;
       margin-top: 0.5rem;
@@ -128,10 +145,45 @@ body {
 
       color: $fore-color;
       background-color: $mid-color;
+      border-radius: $border-radius;
 
-      button {
-        color: $mid-color;
-        background-color: $fore-color;
+      display: flex;
+      flex-direction: column;
+      flex-wrap: nowrap;
+
+      &__header {
+        flex-grow: 0;
+        .title {
+          display: inline-block;
+        }
+
+        button.close-button {
+          float: right;
+          margin: 0;
+          padding: 0;
+          background-color: $fore-color;
+
+          .icon-close {
+            transform: rotateZ(45deg);
+            fill: $mid-color;
+          }
+        }
+      }
+
+      &__content {
+        flex-grow: 1;
+
+        flex-grow: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+
+        .item {
+        }
+
+        button.quit-button {
+          width: 7rem;
+        }
       }
     }
   }
