--- a/client/src/style/index.scss
+++ b/client/src/style/index.scss
@@ -128,6 +128,19 @@ body {
       margin-right: 0.2rem;
     }
 
+    &-user {
+      &-details {
+        &__line {
+          &-label {
+            font-weight: 400;
+            margin-right: 1rem;
+          }
+          &-detail {
+          }
+        }
+      }
+    }
+
     &-button {
       padding: 0;
       margin: 0;
@@ -182,9 +195,6 @@ body {
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-
-        .item {
-        }
 
         button.quit-button {
           width: 7rem;
